test/corpus/control-statements.txt
===================
For Loop 1
===================

10 FOR I = 1 TO 2000 : NEXT I

---

(source_file
	(line
		(linenum)
		(statement
			(statement_for) (int_name) (op_eq_for) (integer) (op_to) (integer))
		(sep_statement)
		(statement
			(statement_next) (int_name))))

===================
For Loop 2
===================

10 FOR I = 1 TO 5 : FOR J = 2 TO 4 : NEXT J,I

---

(source_file
	(line
		(linenum)
		(statement
			(statement_for) (int_name) (op_eq_for) (integer) (op_to) (integer))
		(sep_statement)
		(statement
			(statement_for) (int_name) (op_eq_for) (integer) (op_to) (integer))
		(sep_statement)
		(statement
			(statement_next) (int_name) (sep_next) (int_name))))

===================
Goto
===================

10 GOTO 10

---

(source_file
	(line
		(linenum)
		(statement (statement_goto) (integer))))

===================
Gosub
===================

10 GOSUB 100
20 END
100 RETURN

---

(source_file
	(line
		(linenum)
		(statement (statement_gosub) (integer)))
	(line
		(linenum)
		(statement (statement_end)))
	(line
		(linenum)
		(statement (statement_return))))

===================
If-then 1
===================

10 IF X > Y THEN 10

---

(source_file
	(line
		(linenum)
		(statement (statement_if) (binary_aexpr (int_name) (op_gtr) (int_name)) (statement_then_line) (integer))))

===================
If-then 2
===================

10 IF X(A) < > Y THEN GOTO 10

---

(source_file
	(line
		(linenum)
		(statement (statement_if) (binary_aexpr (int_array (int_name) (open_int) (int_name) (close)) (op_neq) (int_name)) (statement_then) (statement (statement_goto) (integer)))))

===================
If-then 3
===================

10 IF X > Y(2) THEN PRINT "X IS BIGGER"

---

(source_file
	(line
		(linenum)
		(statement (statement_if)
			(binary_aexpr (int_name) (op_gtr) (int_array (int_name) (open_int) (integer) (close)))
			(statement_then)
			(statement (statement_print_str) (string (quote) (unquote))))))
