test/corpus/general.txt
===================
Remark
===================

10 REM HERE IS A REMARK: THIS IS STILL A REMARK
20 PRINT "HELLO"

---

(source_file
	(line
		(linenum)
		(statement (statement_rem) (comment_text)))
	(line
		(linenum)
		(statement (statement_print_str) (string (quote) (unquote)))))

===================
Other
===================

20 LIST : LIST 10: LIST 10,20

---

(source_file
	(line
		(linenum)
		(statement (statement_list))
		(sep_statement)
		(statement (statement_list_line) (linenum))
		(sep_statement)
		(statement (statement_list_line) (linenum) (sep_list) (linenum))))
