test/corpus/graphics.txt
===================
Low Resolution
===================

10 GR: COLOR = C(J): PLOT X+1,Y-1
20 HLIN 0,39 AT Y
30 VLIN 10,Y AT X
40 PRINT SCRN(X+1,Y-1)

---

(source_file
	(line
		(linenum)
		(statement (statement_gr))
		(sep_statement)
		(statement (statement_coloreq) (int_array (int_name) (open_int) (int_name) (close)))
		(sep_statement)
		(statement (statement_plot)
			(binary_aexpr (int_name) (op_plus) (integer))
			(sep_plot)
			(binary_aexpr (int_name) (op_minus) (integer))))
	(line
		(linenum) (statement (statement_hlin) (integer) (sep_hlin) (integer) (op_hlin_at) (int_name)))
	(line
		(linenum) (statement (statement_vlin) (integer) (sep_vlin) (int_name) (op_vlin_at) (int_name)))
	(line
		(linenum)
		(statement (statement_print_int) (fcall (fcall_scrnp)
			(binary_aexpr (int_name) (op_plus) (integer))
			(sep_scrn)
			(binary_aexpr (int_name) (op_minus) (integer))
			(close)))))
