test/corpus/utility.txt
===================
Peek and Poke
===================

10 V1 = PEEK(A*16 + 5) : V2 = PEEK(255)
20 POKE A1,V1 : POKE A*16 + 5,V2*2 / Y
30 POKE 255,0

---

(source_file
	(line
		(linenum)
		(statement
			(assignment_int (int_name) (op_eq_assign_int) (fcall (fcall_peek)
				(open_fcall)
				(binary_aexpr (binary_aexpr (int_name) (op_times) (integer)) (op_plus) (integer))
				(close))))
		(sep_statement)
		(statement
			(assignment_int (int_name) (op_eq_assign_int) (fcall (fcall_peek) (open_fcall) (integer) (close)))))
	(line
		(linenum)
		(statement (statement_poke) (int_name) (sep_poke) (int_name))
		(sep_statement)
		(statement (statement_poke)
			(binary_aexpr (binary_aexpr (int_name) (op_times) (integer)) (op_plus) (integer))
			(sep_poke)
			(binary_aexpr (binary_aexpr (int_name) (op_times) (integer)) (op_div) (int_name))))
	(line
		(linenum)
		(statement (statement_poke) (integer) (sep_poke) (integer))))

===================
Call
===================

10 CALL 54915
20 CALL -936
30 CALL ROUTINE (J)

---

(source_file
	(line (linenum) (statement (statement_call) (integer)))
	(line (linenum) (statement (statement_call) (unary_aexpr (op_unary_minus) (integer))))
	(line (linenum) (statement (statement_call) (int_array (int_name) (open_int) (int_name) (close)))))

===================
Debugging
===================

10 TRACE
20 NOTRACE
30 DSP A
40 NODSP A$

---

(source_file
	(line (linenum) (statement (statement_trace)))
	(line (linenum) (statement (statement_notrace)))
	(line (linenum) (statement (statement_dsp_int) (int_name)))
	(line (linenum) (statement (statement_nodsp_str) (str_name (dollar)))))
